# GitHub_Actions

./: .gitignore  README.md  dump.rdb  pyproject.toml
.github/workflows/: pytest.yml
config/: celery.py  settings.py
products/: admin.py  models.py  tasks.py  urls.py  views.py
products/migrations/: 0001_initial.py
products/tests/: test_views.py
templates/: base.html  product_confirm_delete.html  product_detail.html  product_form.html  product_list.html
